crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_params_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..52,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..21,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 7..9,
                            node_index: NodeIndex(None),
                            type_params: [],
                            runtime_type_params: None,
                        },
                    ),
                    parameters: Parameters {
                        range: 9..11,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 17..21,
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 22..51,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 27..36,
                            id: Name("ListOrSet"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 36..38,
                            node_index: NodeIndex(None),
                            type_params: [],
                            runtime_type_params: None,
                        },
                    ),
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 41..51,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 41..45,
                                    id: Name("list"),
                                    ctx: Load,
                                },
                            ),
                            op: BitOr,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 48..51,
                                    id: Name("set"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | def foo[]():
  |         ^ Syntax Error: Type parameter list cannot be empty
2 |     pass
3 | type ListOrSet[] = list | set
  |


  |
1 | def foo[]():
2 |     pass
3 | type ListOrSet[] = list | set
  |                ^ Syntax Error: Type parameter list cannot be empty
  |
